Cleanup and updates for PSK